[package]
name = "maos-theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8"
wasm-bindgen = "0.2"
web-sys = "0.3"

anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.8.0"
md5 = "0.7.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
